<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.roomwordsample.MainActivity">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_deleteAll"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_make_notification"
        android:orderInCategory="100"
        android:title="@string/notification_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_make_notiAtTime"
        android:orderInCategory="100"
        android:title="@string/notificationAtspecificTime_title"
        app:showAsAction="never" />
</menu>
